--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -30,6 +30,17 @@
       <!-- Elementy nawigacji -->
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item" th:if="${isAuthenticated}">
+            <a th:if="${role == 'OWNER'}" class="nav-link btn btn-success me-2" href="/cars/add">
+              <i class="fas fa-plus-circle me-1"></i> Dodaj Samochód
+            </a>
+          </li>
+          <li class="nav-item" th:if="${isAuthenticated}">
+            <a th:if="${role == 'OWNER'}" class="nav-link btn btn-success me-2" href="/rentals">
+              <i class="fas fa-plus-circle me-1"></i> Wypożyczenia
+            </a>
+          </li>
+
           <!-- Jeśli użytkownik jest zalogowany -->
           <li class="nav-item dropdown" th:if="${isAuthenticated}">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown"
